[package]
name = "imagebuffer-generics"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kmgill/imagebuffer-generics"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.18"
itertools = "0.12.0"
image = "0.25.1"
#dng = "1.5.1"
anyhow = "1.0.82"
exr = "1.72.0"